# ssa-ops

./: .env.example  .envrc  .gitignore  CLAUDE.md  PLAN.md  PROJECT.md  README.md  databricks-logfood.yml  databricks.yml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pyproject.toml  vite.config.ts  vitest.config.ts
.claude/: ralph-loop.local.md
.github/workflows/: create-lakebase-branch.yml  delete-lakebase-branch.yml  deploy-automated.yml.disabled  deploy-lakebase.yml  deploy-pipeline.yml  deploy.yml
bundles/logfood/: databricks.yml
docs/: PLAN-metric-views.md  REFERENCES.md  RESEARCH-blocked-metrics.md  architecture.md  charter-metrics.md  data-dictionary.md  electric-setup.md  gtmhub_docs.md  metrics-tree.md  query-map.md  ssa-ops-asq-queries-plan.md  testing.md
docs/adr/: 001-electric-sql-from-source.md
infra/: databricks.yml
infra/resources/: app.yml  (+8 more)
management/: README.md  asq_overdue_chatter.py  deploy.fish
pipelines/: ssa_dashboard_views.py
reports/: can-asq-analysis-2026-03-22.md  can-asq-assignment-2026-03-22.md  can-asq-triage-detailed-2026-03-22.md  test-report_2026-03-19_23-26-44.md
scripts/: deploy_metric_view.py  migrations.sql  post_deploy.sh  run-validation.sh  test_charter_metrics.py
sql/: cjc-canada-fy27-product-targets.sql  deploy_charter_metrics.sql  deploy_charter_metrics_fevm.sql  deploy_views.sql
src/: styles.css
tasks/: CLAUDE.md  TODO-fevm-data-sync.md  checkpoint.md  lessons.md  ralph-loop-charter-metrics.md  todo.md
tests/: crud.test.ts  data-validation.test.ts  db-utils.ts  infrastructure.test.ts
(+91 files in other folders)
