[project]
name = "ssa-ops"
version = "0.1.0"
description = "Local-first data app with Databricks backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "databricks-sdk>=0.40.0",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

# No build system - this is primarily a Node.js project
# Python deps are for scripts/tooling only
